src/main/java/com/github/gregwhitaker/ratpackerrorhandler/example/core/error/BaseFieldException.java
package com.github.gregwhitaker.ratpackerrorhandler.example.core.error;

public abstract class BaseFieldException extends Throwable {

}
